# stars-reborn-engine

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
engine/: Cargo.toml
engine/data/planet_names/extended/: snakes.txt
engine/src/: lib.rs  main.rs
engine/src/game/: mod.rs  score.rs  state.rs  view.rs
engine/src/game/ai/: mod.rs
engine/src/game/combat/: mod.rs
engine/src/game/objects/: advantage_points.rs  fleet.rs  mod.rs  planet.rs  player.rs  race.rs  race_defaults.rs  technology.rs  universe.rs
engine/src/game/turn/: mod.rs
engine/src/game/universe/: mod.rs
engine/src/http/: mod.rs
engine/src/store/: mod.rs
engine/tests/: player_view_leak.rs
engine/tests/data/: base_cheap_germ.r1  base_construction_cheap.r1  base_electronics_cheap.r1  base_energy_cheap.r1  base_fp15.r1  base_humanoid_retypedl.r1  base_humanoid_with_plural.r1  base_inner_strength.r1  base_leftover_mines.r1  base_mc2.r1  base_mp15.r1  base_name_aaaa.r1  base_name_aaaa_noplural.r1  base_name_bbbb.r1  base_name_hhhhhhhh.r1  base_packet_physics.r1  base_weapons_cheap.r1
engine/tests/data/default_races/: antetheral.r1  humanoid.r1  insectoid.r1  nucleotid.r1  rabbitoid.r1  silicanoid.r1
